kube-derive/tests/ui/fail_with_suggestion.stderr
error: Unknown field: `shortnames`. Did you mean `shortname`?
 --> tests/ui/fail_with_suggestion.rs:6:58
  |
6 | #[kube(group = "clux.dev", version = "v1", kind = "Foo", shortnames = "foo")]
  |                                                          ^^^^^^^^^^^^^^^^^^
